--- a/Portfolio2.0/projects.css
+++ b/Portfolio2.0/projects.css
@@ -54,6 +54,7 @@
 
     justify-content: space-between;
     align-items: center;
+    z-index:15;
 }
 .project-content-title{
 
