--- a/Portfolio2.0/sidework.css
+++ b/Portfolio2.0/sidework.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100%;
     position: fixed;
-    background-color: rgba(0, 0, 0, 0.526);
+    background-color: rgba(0, 0, 0, 0.76);
     top: 0;
     left: 0;
     z-index: 999;
